<resources>
    <string name="app_name">御宅工作</string>
    <string name="phone">手机号码</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="forget_psw">忘记密码?</string>
    <string name="validate_code">验证码</string>
    <string name="get_validate_code">获取验证码</string>
    <string name="confirm_psw">确认密码</string>
    <string name="incorrect_phone">手机号码格式不正确</string>
    <string name="incorrect_psw">密码格式不正确</string>
    <string name="incorrect_validate_code">验证码格式不正确</string>
    <string name="server_error">服务器不务正业中</string>
    <string name="login_success">登录成功</string>
    <string name="psw_error">密码错误</string>
    <string name="incorrect_account">账号不存在</string>
    <string name="not_same_psw">两次密码不一致</string>
    <string name="new_psw">新密码</string>
    <string name="alter_confirm">确认修改</string>
    <string name="publish_project">需求发布</string>
    <string name="recent_contact">最近联系</string>
    <string name="my_orders">我的订单</string>
    <string name="yu_zhai">御宅</string>
    <string name="orders">订单</string>
    <string name="publish">发布</string>
    <string name="contact">聊天</string>
    <string name="login_or_reg">登录 / 注册</string>
    <string name="phone_authen">手机认证</string>
    <string name="realname_authen">实名认证</string>
    <string name="brand">© 2017 YuZhaiWork All Rights Reserved</string>
    <string name="account_manager">账户管理</string>
    <string name="avater">头像</string>
    <string name="add_images">添加图片</string>
    <string name="add_image_by_camera">手机相机添加</string>
    <string name="add_image_by_pick">本地相册添加</string>
    <string name="image_select_limit">一次最多只能上传5张图片</string>
</resources>
