<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:scaleType="centerInside"
        android:src="@drawable/title_logo" />

    <RelativeLayout
        android:id="@+id/warp_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/user_name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/color_757575"
            app:counterEnabled="true"
            app:counterMaxLength="11">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/user_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                android:inputType="number"
                android:lines="1"
                android:maxLength="11" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:id="@+id/verify_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_name_layout"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/verify_code_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:textColorHint="@color/color_757575"
                app:counterEnabled="true"
                app:counterMaxLength="6">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/verify_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/validate_code"
                    android:inputType="number"
                    android:lines="1"
                    android:maxLength="6" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/verify_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="2"
                android:background="@drawable/code_button_style"
                android:text="@string/get_validate_code"
                android:textColor="@color/color_white" />
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/psw_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/verify_layout"
            android:textColorHint="@color/color_757575"
            app:counterEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/new_psw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_psw"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLength="16" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/confirm_psw_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/psw_layout"
            android:textColorHint="@color/color_757575"
            app:counterEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/confirm_psw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_psw"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLength="16" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/alter_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/confirm_psw_layout"
            android:background="@drawable/button_style"
            android:text="@string/alter_confirm"
            android:textColor="@color/color_white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/login_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/alter_button"
            android:layout_marginTop="10dp"
            android:background="@drawable/login_button_style2"
            android:text="@string/login"
            android:textColor="@color/mainColor"
            android:textSize="20sp" />
    </RelativeLayout>
</RelativeLayout>